--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,34 @@ ol {
 		background-color: #f9f9f9;
 	}
 }
+
+.page-container {
+	background-color: #fff;
+	border-radius: 4px;
+	min-height: 100%;
+	padding: 10px;
+}
+
+/* 单号省略 */
+.ellipsis-word-1 {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+/* 多行省略 */
+.ellipsis-word-2 {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 2; /* 两行 */
+	-webkit-box-orient: vertical;
+}
+
+.ellipsis-word-3 {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 3; /* 两行 */
+	-webkit-box-orient: vertical;
+}
