--- a/src/layout/header/index.less
+++ b/src/layout/header/index.less
@@ -3,6 +3,7 @@
   padding: 0;
   line-height: 56px;
   background-color: #fff;
+  border-bottom: 1px solid #ccc;
 
   display: flex;
   align-items: center;
@@ -25,15 +26,15 @@
     height: 100%;
 
     .project-name {
-      font-size: 20px;
+      font-size: 18px;
+
       color: #1677ff;
-      border: 1px solid #1677ff;
-      font-weight: 600;
-
-      height: 36px;
-      line-height: 34px;
-
+      border: 1px solid currentColor;
       border-radius: 6px;
+
+      height: 30px;
+      line-height: 30px;
+
       padding: 0 8px;
       margin-right: 10px;
     }
